forms-flow-eforms-integrations/dhcho/dev/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-eforms-integrations
  namespace : form-flow-eforms-integrations
  labels:
    app.kubernetes.io/name: integrations
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: integrations
  template:
    metadata:
      labels:
        app.kubernetes.io/name: integrations
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: form-flow-eforms-integrations
          image: sofiamunicipalitydigitall/forms-flow-eforms-integrations:latest
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c",  "echo '213.91.173.217 service-regix-test.egov.bg' >> /etc/hosts && echo '83.228.89.103 integr-test.egov.bg' >> /etc/hosts  " ]
          ports:
            - containerPort: 8002
              name: http
              protocol: TCP
